--- a/src/main/resources/static/css/user/signupStep2.css
+++ b/src/main/resources/static/css/user/signupStep2.css
@@ -297,7 +297,7 @@ input[type="number"]::-webkit-inner-spin-button {
 	color: #2A221D;
 }
 
-.radioLabelMail {
+.radioLabelmale {
 	position: absolute;
 	width: 151px;
 	height: 42px;
@@ -310,7 +310,7 @@ input[type="number"]::-webkit-inner-spin-button {
 	align-items: center;
 }
 
-.radioLabelFemail {
+.radioLabelFemale {
 	position: absolute;
 	width: 151px;
 	height: 42px;
@@ -327,7 +327,7 @@ input[type="number"]::-webkit-inner-spin-button {
 	display: none;
 }
 
-.ellipseMail {
+.ellipsemale {
 	margin-left: 10%;
 	width: 22px;
 	height: 22px;
@@ -338,7 +338,7 @@ input[type="number"]::-webkit-inner-spin-button {
 	align-items: center;
 }
 
-.ellipseFemail {
+.ellipseFemale {
 	margin-left: 10%;
 	width: 22px;
 	height: 22px;
@@ -350,7 +350,7 @@ input[type="number"]::-webkit-inner-spin-button {
 	align-items: center;
 }
 
-.mailText {
+.maleText {
 	margin-left: 25%;
 	font-family: 'Bookk Myungjo';
 	font-style: normal;
@@ -360,7 +360,7 @@ input[type="number"]::-webkit-inner-spin-button {
 	color: #2A221D;
 }
 
-.femailText {
+.femaleText {
 	margin-left: 25%;
 	font-family: 'Bookk Myungjo';
 	font-style: normal;
