--- a/src/main/resources/static/css/user/signupStep2.css
+++ b/src/main/resources/static/css/user/signupStep2.css
@@ -297,7 +297,7 @@ input[type="number"]::-webkit-inner-spin-button {
 	color: #2A221D;
 }
 
-.radioLabelmale {
+.radioLabelMale {
 	position: absolute;
 	width: 151px;
 	height: 42px;
@@ -327,7 +327,7 @@ input[type="number"]::-webkit-inner-spin-button {
 	display: none;
 }
 
-.ellipsemale {
+.ellipseMale {
 	margin-left: 10%;
 	width: 22px;
 	height: 22px;
