--- a/src/main/resources/static/css/mainImg.css
+++ b/src/main/resources/static/css/mainImg.css
@@ -13,7 +13,8 @@
 }
 
 .questionText {
-	width: 340px; font-family : 'Bookk Myungjo';
+	width: 340px; 
+	font-family : 'Bookk Myungjo';
 	font-style: normal;
 	font-weight: 300;
 	font-size: 20px;
