--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -10,6 +10,7 @@ body {
 }
 
 .headBox {
+	position: relative;
 	width: 100%;
 	height: 63px;
 	display: flex;
@@ -53,7 +54,7 @@ body {
 	width: 14px;
 	height: 14px;
 	right: 17.3%;
-	top: 3.8%;
+	top: 50%;
 }
 
 .stickerPageLink {
@@ -77,4 +78,9 @@ width: 22px;
 height: 22px;
 right: 5%;
 border: none;
+}
+
+.addBtn{
+	position: absolute;
+	left: 90%;
 }
