--- a/src/main/resources/static/css/bucket/bucketListView.css
+++ b/src/main/resources/static/css/bucket/bucketListView.css
@@ -31,7 +31,8 @@ a {
 }
 
 .testz {
-	width: 95%;
+	margin-left: 3%;
+	width: 97%;
 	height: 140px;
 	margin-top: 50px;
 	margin-bottom: 50px;
@@ -44,7 +45,7 @@ a {
 .testbox {
 	display: inline-block;
 	position: relative;
-	top:32px;
+	top: 32px;
 }
 
 .testspan {
@@ -84,12 +85,60 @@ a {
 	background-image: url("../../image/bucket/orange.png");
 }
 
-#box0 {
-
-	top:32px;
+#sticker3 {
+	background-image: url("../../image/bucket/blue.png");
 }
 
-.imgBack{
+#sticker4 {
+	background-image: url("../../image/bucket/dust.png");
+}
+
+
+
+.imgBack {
 	position: absolute;
-	top:162.5px;
+	top: 162.5px;
+	left: -1.5px;
+}
+
+.ourBucketText {
+	position: absolute;
+	left: 120px;
+	top: 65px;
+	font-family: 'Bookk Myungjo';
+	font-style: normal;
+	font-weight: 300;
+	font-size: 15px;
+	line-height: 15px;
+	letter-spacing: 0.06em;
+	color: #9D9690;
+}
+
+.listLayout {
+	position: absolute;
+	top: 177.5px;
+	left: 11px;
+	width: 97%;
+	min-height: 665px;
+	background-image: url("../../image/bucket/bucketBackground2-1.png");
+	border-top: solid 6px;
+	border-image: url( "../../image/bucket/buckeyViewBorderColor.png" ) 1 10 10 repeat;
+	
+}
+
+.listContainer {
+	margin-top: 40px;
+	margin-left: 70px;
+	margin-right: 30px;
+}
+
+.bucketTitleSpan {
+	position: absolute;
+	top: 5px;
+	left: 30px;
+	font-family: 'Bookk Myungjo';
+	font-style: normal;
+	font-weight: 300;
+	font-size: 18px;
+	color: #2A221D;
 }
