--- a/src/main/resources/static/css/bucket/bucketDetail.css
+++ b/src/main/resources/static/css/bucket/bucketDetail.css
@@ -55,11 +55,9 @@ a {
 
 .modalBox {
 	position: fixed;
-	height: 210px;
+	height: 280px;
 	bottom: 0px;
 	width: 100%;
-	border-top-left-radius: 50px;
-	border-top-right-radius: 50px;
 	background-color: white;
 	text-align: center;
 	justify-content: center;
@@ -75,6 +73,8 @@ a {
 	font-style: normal;
 	font-weight: 300;
 	font-size: 18px;
+	border-top: solid 1px;
+	border-color: #FFC3C3;
 }
 
 .modifyBtn {
@@ -86,5 +86,9 @@ a {
 }
 
 .cancelBtn {
+	color: #2A221D;
+}
+
+.finishBtnz {
 	color: #2A221D;
 }
