--- a/src/main/resources/static/css/bucket/bucketListView.css
+++ b/src/main/resources/static/css/bucket/bucketListView.css
@@ -1,5 +1,6 @@
 @charset "UTF-8";
 
+
 a {
 	text-decoration: none;
 }
@@ -40,6 +41,7 @@ a {
 	overflow-x: auto;
 	vertical-align: middle;
 	text-align: right;
+	
 }
 
 .testbox {
@@ -136,9 +138,45 @@ a {
 	position: absolute;
 	top: 5px;
 	left: 30px;
+	width:250px;
 	font-family: 'Bookk Myungjo';
 	font-style: normal;
 	font-weight: 300;
 	font-size: 18px;
 	color: #2A221D;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+	overflow: hidden;
+	
+}
+
+.noBucketText{
+	font-family: 'Bookk Myungjo';
+	font-style: normal;
+	font-weight: 300;
+	font-size: 18px;
+	color: #2A221D;
+}
+.greenChk{
+	position: absolute;
+	left:-15px;
+	top:-60px;
+}
+
+.successStamp{
+	position: absolute;
+	left:70px;
+	top:-155px;
+}
+
+.finishDateText{
+	position: absolute;
+	left:85px;
+	top:-98px;
+	font-family: 'Bookk Myungjo';
+font-style: normal;
+font-weight: 700;
+font-size: 20px;
+color: #1D9871;
+transform: rotate(-7.76deg);
 }
