--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -4,9 +4,10 @@ body {
 }
 
 .layout {
-	width: 100%;
-	height: 100%;
-	background: #F8F8F5;
+	min-width: 100%;
+	min-height: 850px;
+	background-image: url("../../image/itdaBackImg.png");
+	
 }
 
 .headBox {
