--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -84,3 +84,22 @@ border: none;
 	position: absolute;
 	left: 90%;
 }
+
+.send{
+	position: absolute;
+	right: 15%;
+	width: 22px;
+	height: 22px;
+	width: 22px;
+	top: 25%;
+	transform: rotate(-30deg);
+}
+
+.send2{
+	position: absolute;
+	right: 5%;
+	width: 25px;
+	height: 25px;
+	width: 25px;
+	top: 25%;
+}
