--- a/src/main/resources/static/css/landingPage.css
+++ b/src/main/resources/static/css/landingPage.css
@@ -1,9 +1,4 @@
-.layout {
-	position: relative;
-	width: 393px;
-	height: 851px;
-	background: #F8F8F5;
-}
+
 
 .identityText {
 	position: absolute;
@@ -35,18 +30,19 @@
 	width: 320px;
 	height: 42px;
 	left: 36px;
-	top: 636px;
+	top: 686px;
 	border: none;
-	background: rgba(177, 125, 90, 0.1);
-	border-radius: 23px;
+	text-align: center;
+	padding-top: 30px;
 }
 
 .startText {
+	
 	font-family: 'Bookk Myungjo';
 	font-style: normal;
-	font-weight: 300;
+	font-weight: 700;
 	font-size: 18px;
 	line-height: 18px;
 	letter-spacing: 0.03em;
-	color: #b2b2b2;
+	color: #2A221D;
 }
