--- a/src/main/resources/static/css/bucket/bucketDetail.css
+++ b/src/main/resources/static/css/bucket/bucketDetail.css
@@ -7,7 +7,6 @@ a {
 .bucketTitle {
 	width: 83%;
 	padding-top: 15px;
-
 	font-family: 'Bookk Myungjo';
 	font-style: normal;
 	font-weight: 300;
@@ -23,7 +22,6 @@ a {
 
 .bucketRegDate {
 	padding-top: 15px;
-
 	font-family: 'Bookk Myungjo';
 	font-style: normal;
 	font-weight: 300;
@@ -38,12 +36,12 @@ a {
 }
 
 .bucketContents {
-
-	font-family: 'Bookk Myungjo';
+	width: 360px; font-family : 'Bookk Myungjo';
 	font-style: normal;
 	font-weight: 300;
 	font-size: 16px;
 	color: #2A221D;
+	font-family: 'Bookk Myungjo';
 	font-family: 'Bookk Myungjo';
 }
 
@@ -135,6 +133,7 @@ a {
 	font-style: normal;
 	font-weight: 300;
 	font-size: 16px;
+	width: 290px;
 	align-items: center;
 	letter-spacing: 0.05em;
 	color: #2A221D;
@@ -185,11 +184,11 @@ a {
 }
 
 .replyCountBox {
-	padding-top: 10px;
-	height: 50px;
+	padding-top: 10px; height : 50px;
 	position: relative;
 	display: flex;
 	align-items: center;
+	height: 50px;
 }
 
 .replyCountImg {
@@ -204,4 +203,46 @@ a {
 	font-weight: 300;
 	font-size: 15px;
 	color: #9D9690;
+}
+
+.replyEllipsis {
+	position: absolute;
+	left: 280px;
+	top:-15px;
+	padding:15px;
+	filter: grayscale(90%);
+}
+
+.replyModal {
+	position: absolute;
+	left: 220px;
+	top: 20px;
+	height: 70px;
+	width: 100px;
+	border: solid 1px;
+	text-align: center;
+	vertical-align: middle;
+	align-items: center;
+	background-color: white;
+	border-color: #FFC3C3;
+	font-family: 'Bookk Myungjo';
+font-style: normal;
+font-weight: 300;
+font-size: 16px;
+	
+}
+
+.replyModalBtn{
+	display: flex;
+	text-align: center;
+	justify-content: center;
+	vertical-align: middle;
+	align-items: center;
+	height: 35px;
+	
+}
+
+.reMoBtn{
+	border-bottom: solid 1px;
+	border-color: #FFC3C3;
 }
