--- a/src/main/resources/static/css/whisper/whisperOutbox.css
+++ b/src/main/resources/static/css/whisper/whisperOutbox.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 
 .outboxText {
-	position: absolute;
+	position: relative;
 	width: 162px;
 	height: 39px;
 	left: 30px;
@@ -20,7 +20,7 @@
 
 
 .cardFrame {
-	position: absolute;
+	position: relative;
 	width: 307px;
 	height: 139px;
 	left: 43px;
@@ -28,7 +28,7 @@
 }
 
 .toPersonText {
-	position: absolute;
+	position: relative;
 	height: 33px;
 	left: 63px;
 	top: 192px;
@@ -43,7 +43,7 @@
 }
 
 .toPersonName {
-	position: absolute;
+	position: relative;
 	width: 103px;
 	height: 33px;
 	left: 63px;
@@ -59,7 +59,7 @@
 }
 
 .toPersonLine {
-	position: absolute;
+	position: relative;
 	width: 112px;
 	height: 0px;
 	left: 63px;
@@ -68,7 +68,7 @@
 }
 
 .sendDateText {
-	position: absolute;
+	position: relative;
 	width: 52px;
 	height: 19px;
 	left: 238px;
@@ -86,7 +86,7 @@
 }
 
 .sendDate {
-	position: absolute;
+	position: relative;
 	width: 49px;
 	height: 33px;
 	left: 283px;
@@ -103,7 +103,7 @@
 }
 
 .inboxCardStamp {
-	position: absolute;
+	position: relative;
 	width: 63px;
 	height: 63px;
 	left: 271px;
@@ -111,7 +111,7 @@
 }
 
 .fromPersonText {
-	position: absolute;
+	position: relative;
 	width: 63px;
 	height: 33px;
 	left: 219px;
@@ -127,7 +127,7 @@
 }
 
 .fromPersonName {
-	position: absolute;
+	position: relative;
 	width: 83px;
 	height: 33px;
 	left: 219px;
@@ -143,7 +143,7 @@
 }
 
 .fromPersonLine {
-	position: absolute;
+	position: relative;
 	width: 112px;
 	height: 0px;
 	left: 219px;
