--- a/src/main/resources/static/css/bucket/bucketDetail.css
+++ b/src/main/resources/static/css/bucket/bucketDetail.css
@@ -62,6 +62,9 @@ a {
 	text-align: center;
 	justify-content: center;
 	vertical-align: middle;
+	border-radius: 30px;
+	border-top: solid 1px;
+	border-color: #FFC3C3;
 }
 
 .btnBox {
