alarm 목록, whisper 기능, 레이아웃 완료, mainImg 배치, 로그인 권한 및 잘못된 접근 예외 처리, javascript 뒤로가기 버튼 수정, dailyQuestion 로직 수정

--- a/src/main/resources/static/css/mainImg.css
+++ b/src/main/resources/static/css/mainImg.css
@@ -6,7 +6,7 @@
 	height: 174px;
 	left: 15px;
 	top: 661px;
-	background-image: url( "../image/questionBox.png" );
+	background-image: url("../image/questionBox.png");
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -34,4 +34,40 @@
 	height: 32px;
 	left: 30px;
 	top: 87px;
+}
+
+.mainBackground{
+	position: absolute;
+	top: 0;
+	left: 0;
+	width:393px;
+	height: 851px;
+}
+
+.mainTimeLine{
+	position: absolute;
+	top: 210px;
+	left: 30px;
+	width:170px;
+}
+
+.mainBucketList{
+	position: absolute;
+	top : 420px;
+	right: 10px;
+	width: 120px;	
+}
+
+.mainDailyQuestion{
+	position: absolute;
+	top : 460px;
+	left : 45px;
+	width: 230px;
+}
+
+.mainWhisper {
+	position: absolute;
+	top: 370px;
+	right: 140px;
+	width: 90px;
 }
