--- a/src/main/resources/static/css/whisper/whisperOutbox.css
+++ b/src/main/resources/static/css/whisper/whisperOutbox.css
@@ -1,5 +1,40 @@
 @charset "UTF-8";
 
+
+
+.dateLine1 {
+	position: relative;
+	width: 137px;
+	height: px;
+	left: 15px;
+	top: 11em;
+	border: 1px solid #BBB3AB;
+}
+
+.dateLine2 {
+	position: relative;
+	width: 137px;
+	height: 0px;
+	left: 238px;
+	top: 162px;
+	border: 1px solid #BBB3AB;
+}
+
+.outboxListDate {
+	position: relative;
+	left: 164px;
+	top: 172px;
+	font-family: 'Bookk Myungjo';
+	font-style: normal;
+	font-weight: 300;
+	font-size: 13px;
+	line-height: 13px;
+	display: flex;
+	align-items: center;
+	text-align: center;
+	color: #9D9690;
+}
+
 .outboxText {
 	position: relative;
 	width: 162px;
@@ -16,9 +51,6 @@
 	color: #2A221D;
 }
 
-
-
-
 .cardFrame {
 	position: relative;
 	width: 307px;
@@ -31,7 +63,7 @@
 	position: relative;
 	height: 33px;
 	left: 63px;
-	top: 192px;
+	top: 12em;
 	font-family: 'Bookk Myungjo';
 	font-style: normal;
 	font-weight: 300;
@@ -47,7 +79,7 @@
 	width: 103px;
 	height: 33px;
 	left: 63px;
-	top: 211px;
+	top: 6.5em;
 	font-family: 'Bookk Myungjo';
 	font-style: normal;
 	font-weight: 300;
@@ -63,7 +95,7 @@
 	width: 112px;
 	height: 0px;
 	left: 63px;
-	top: 241px;
+	top: 6em;
 	border: 1px solid #BBB3AB;
 }
 
@@ -72,7 +104,7 @@
 	width: 52px;
 	height: 19px;
 	left: 238px;
-	top: 199px;
+	top: -0.5em;
 	font-family: 'Bookk Myungjo';
 	font-style: normal;
 	font-weight: 300;
@@ -90,7 +122,7 @@
 	width: 49px;
 	height: 33px;
 	left: 283px;
-	top: 192px;
+	top: -3em;
 	font-family: 'Bookk Myungjo';
 	font-style: normal;
 	font-weight: 300;
@@ -102,51 +134,10 @@
 	color: #9D9690;
 }
 
-.inboxCardStamp {
+.outboxCardStamp {
 	position: relative;
 	width: 63px;
 	height: 63px;
 	left: 271px;
-	top: 208px;
-}
-
-.fromPersonText {
-	position: relative;
-	width: 63px;
-	height: 33px;
-	left: 219px;
-	top: 254px;
-	font-family: 'Bookk Myungjo';
-	font-style: normal;
-	font-weight: 300;
-	font-size: 9px;
-	line-height: 9px;
-	display: flex;
-	align-items: center;
-	color: #2A221D;
-}
-
-.fromPersonName {
-	position: relative;
-	width: 83px;
-	height: 33px;
-	left: 219px;
-	top: 273px;
-	font-family: 'Bookk Myungjo';
-	font-style: normal;
-	font-weight: 300;
-	font-size: 15px;
-	line-height: 15px;
-	display: flex;
-	align-items: center;
-	color: #2A221D;
-}
-
-.fromPersonLine {
-	position: relative;
-	width: 112px;
-	height: 0px;
-	left: 219px;
-	top: 303px;
-	border: 1px solid #BBB3AB;
+	top: -3em;
 }
