--- a/src/main/resources/static/css/whisper/whisperDetail.css
+++ b/src/main/resources/static/css/whisper/whisperDetail.css
@@ -100,9 +100,73 @@ top: 72px;
 	text-align: center; /* 가운데 정렬 */
 	transform: translateY(100%); /* 처음에는 아래로 숨겨놓음 */
 	transition: transform 0.3s, bottom 0.3s; /* transform, bottom 속성이 변할 때 애니메이션 효과 적용 */
+	border-radius: 30px 30px 0 0; /* 상단 모서리만 둥글게 */
+    overflow: hidden; /* 모서리 부분이 넘치는 것을 방지하기 위해 overflow 속성 추가 */
 }
 
 .detailDeleteBox.active {
 	transform: translateY(0%); /* active 클래스가 추가되면 위로 이동시킴 */
 	bottom: 0; /* bottom 속성 값 변경 */
 }
+
+
+/* 모달 창 스타일 */
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+.modal-content {
+  background-color: #fefefe;
+  margin: auto;
+  padding: 20px;
+  border-radius: 10px;
+  width: 300px;
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.modal-deleteText {
+  font-family: 'Bookk Myungjo';
+  font-style: normal;
+  font-weight: 300;
+  font-size: 20px;
+  line-height: 20px;
+}
+
+.modal-buttons {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+}
+
+.modal-buttons button {
+	padding: 10px 20px;
+	border-radius: 5px;
+	border: none;
+	font-size: 16px;
+	cursor: pointer;
+}
+
+#cancel-button {
+  background-color: #e6e6e6;
+  width: 50%;
+  color: #333;
+}
+
+#delete-button {
+  background-color: #e16646;
+  width: 50%;
+  color: #fff;
+}
+
