--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -51,6 +51,7 @@ a{
 	width: 28px;
 	height: 28px;
 	right: 5%;
+	z-index: 1;
 }
 
 .alarmMark {
@@ -59,6 +60,8 @@ a{
 	height: 14px;
 	right: 17.3%;
 	top: 50%;
+	z-index: 1;
+	
 }
 
 .stickerPageLink {
