--- a/src/main/resources/static/css/admin/admin.css
+++ b/src/main/resources/static/css/admin/admin.css
@@ -5,9 +5,9 @@ body {
 	padding: 0;
 }
 
-.adminLayout {
+.adminLoginLayout {
 	min-height: 100vh;
-	width: 100%;
+	min-width: 100vw;
 	background-image: url("../../image/itdaBackImg.png");
 }
 
@@ -34,28 +34,120 @@ body {
 .adminIdPwdInput {
 	background: rgba(177, 125, 90, 0.1);
 	width: 220px;
-	height: 30px; border : none;
+	height: 30px;
+	border: none;
 	outline: none;
-	border: none; outline : none;
+	border: none;
+	outline: none;
 	border-radius: 10px;
 	padding: 5px;
 	padding-left: 15px;
 	padding-right: 15px;
 }
 
-.adminLoginBtn{
+.adminLoginBtn {
 	margin-top: 80px;
 	width: 105px;
-	height:40px;
+	height: 40px;
 	border: none;
 	outline: none;
 	color: #FFFFFF;
 	font-family: 'Bookk Myungjo';
-font-style: normal;
-font-weight: 700;
-font-size: 16px;
+	font-style: normal;
+	font-weight: 700;
+	font-size: 16px;
 	background: rgba(177, 125, 90, 0.8);
-border-radius: 8px;	
+	border-radius: 8px;
 }
 
+.adminLayout {
+	min-height: 100vh;
+	max-height: 100vh;
+	background: #F3F3F3;
+	overflow-y: hidden;
+}
 
+.adminNaviBox {
+	min-height: 100vh;
+	max-height: 100vh;
+	position: fixed;
+	top: 0;
+	left: 0;
+	box-shadow: 2px 0 4px rgba(0, 0, 0, 0.1);
+	width: 300px;
+	background: #FFFFFF;
+}
+
+.navi-item {
+	position: relative;
+	width: 250px;
+	display: flex;
+	height: 85px;
+	vertical-align: middle;
+	align-items: center;
+}
+
+.item-text {
+	position: relative;
+	left: 20px;
+	font-family: 'Bookk Myungjo';
+	font-style: normal;
+	font-weight: 300;
+	font-size: 18px;
+	color: #2A221D;
+}
+
+.logoAdminText {
+	font-family: 'Bookk Myungjo';
+	font-style: normal;
+	font-weight: 300;
+	font-size: 30px;
+	color: #8F8F8F;
+}
+
+.adminSmallLogo {
+	margin-left: 25px;
+	text-align: center;
+	justify-content: center;
+	text-align: center;
+}
+
+.adminVector {
+	position: absolute;
+	transform: rotate(-180deg);
+	width: 16px;
+	height: 16px;
+	left: 90%;
+}
+
+.top-bar {
+	position: fixed;
+	top:0;
+	height: 85px;
+	background: rgba(255, 255, 255, 0.3);
+	font-size: 14px;
+	text-align: right;
+	display: flex;
+	align-items: center;
+	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+	width: calc(100% - 300px);
+	right: 0;
+	justify-content: flex-end;
+}
+
+.adminContent{
+	margin-left: 300px;
+	margin-top: 85px;
+	padding: 20px;
+}
+
+.detailItemText{
+	margin-bottom: 10px;
+	position: relative;
+	left: 140px;
+	font-family: 'Bookk Myungjo';
+	font-style: normal;
+	font-weight: 300;
+	font-size: 16px;
+	color: #2A221D;
+}
