--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -33,10 +33,10 @@ a{
 
 .vector {
 	position: absolute;
-	left: 5%;
 	width: 20px;
 	height: 20px;
-	width: 20px;
+	left: 15px;
+	top: 22px;
 }
 
 .bell {
