--- a/src/main/resources/static/css/user/myInfo.css
+++ b/src/main/resources/static/css/user/myInfo.css
@@ -66,7 +66,7 @@ color: #9D9690;
 
 .myInfoBirthText{
 	position: absolute;
-left: 236px;
+left: 256px;
 top: 161px;
 
 font-family: 'Bookk Myungjo';
@@ -79,242 +79,165 @@ color: #9D9690;
 
 .myInfoIdText{
 	position: absolute;
-left: 35px;
-top: 256px;
-
-font-family: 'Bookk Myungjo';
-font-style: normal;
-font-weight: 300;
-font-size: 18px;
-
-color: #9D9690;
+	left: 35px;
+	top: 256px;
+	
+	font-family: 'Bookk Myungjo';
+	font-style: normal;
+	font-weight: 300;
+	font-size: 18px;
+	
+	color: #9D9690;
 }
 
 .myInfoId{
 	position: absolute;
-left: 133px;
-top: 256px;
-
-font-family: 'Bookk Myungjo';
-font-style: normal;
-font-weight: 300;
-font-size: 18px;
-
-color: #9D9690;
+	left: 133px;
+	top: 256px;
+	
+	font-family: 'Bookk Myungjo';
+	font-style: normal;
+	font-weight: 300;
+	font-size: 18px;
+	
+	color: #9D9690;
 	
 }
 
 
 .myInfoPwdText{
 	position: absolute;
-left: 35px;
-top: 304px;
-
-font-family: 'Bookk Myungjo';
-font-style: normal;
-font-weight: 300;
-font-size: 18px;
-
-color: #2A221D;
+	left: 35px;
+	top: 304px;
+	
+	font-family: 'Bookk Myungjo';
+	font-style: normal;
+	font-weight: 300;
+	font-size: 18px;
+	color: #2A221D;
 }
 
 .myInfoPwd{
 	position: absolute;
-left: 133px;
-top: 304px;
-
-font-family: 'Bookk Myungjo';
-font-style: normal;
-font-weight: 300;
-font-size: 18px;
-
-color: #2A221D;
+	left: 133px;
+	top: 304px;
+	background: transparent;
+	border: none;
+	border-bottom: 1px solid lightgray;
+  
+	font-family: 'Bookk Myungjo';
+	font-style: normal;
+	font-weight: 300;
+	font-size: 18px;
+	
+	color: #2A221D;
 }
 
 .myInfopwdChkBtn{
 	position: absolute;
-left: 331px;
-top: 303px;
+	left: 331px;
+	top: 303px;
+	z-index: 1;
+}
 
-transform: matrix(1, 0, 0, -1, 0, 0);
+.alert{
+	position: absolute;
+	top: 39%;
+	left : 9%;
+	font-family: 'Bookk Myungjo';
+	font-style: normal;
+	font-size: 12px; 
 }
 
 .myInfoRealNameText{
 	position: absolute;
-left: 35px;
-top: 352px;
-
-font-family: 'Bookk Myungjo';
-font-style: normal;
-font-weight: 300;
-font-size: 18px;
-
-color: #9D9690;
+	left: 35px;
+	top: 352px;
+	
+	font-family: 'Bookk Myungjo';
+	font-style: normal;
+	font-weight: 300;
+	font-size: 18px;
+	
+	color: #9D9690;
 }
 
 .myInfoRealName{
 	position: absolute;
-left: 133px;
-top: 352px;
-
-font-family: 'Bookk Myungjo';
-font-style: normal;
-font-weight: 300;
-font-size: 18px;
-
-color: #9D9690;
+	left: 133px;
+	top: 352px;
+	
+	font-family: 'Bookk Myungjo';
+	font-style: normal;
+	font-weight: 300;
+	font-size: 18px;
+	
+	color: #9D9690;
 }
 
 .myInfoBirthText2{
+	position: absolute;
+	left: 35px;
+	top: 401px;
 	
-position: absolute;
-left: 35px;
-top: 401px;
-
-font-family: 'Bookk Myungjo';
-font-style: normal;
-font-weight: 300;
-font-size: 18px;
-
-color: #9D9690;
+	font-family: 'Bookk Myungjo';
+	font-style: normal;
+	font-weight: 300;
+	font-size: 18px;
+	
+	color: #9D9690;
 	
 }
+
 .myInfoBirth2{
 	position: absolute;
-left: 133px;
-top: 401px;
-
-font-family: 'Bookk Myungjo';
-font-style: normal;
-font-weight: 300;
-font-size: 18px;
-
-color: #9D9690;
-}
-
-.myInfoGenderText{
-	position: absolute;
-left: 35px;
-top: 454px;
-
-font-family: 'Bookk Myungjo';
-font-style: normal;
-font-weight: 300;
-font-size: 18px;
-
-color: #9D9690;
-}
-
-.myInfoMaleText{
-	position: absolute;
-left: 170px;
-top: 454px;
-
-font-family: 'Bookk Myungjo';
-font-style: normal;
-font-weight: 300;
-font-size: 18px;
-color: #9D9690;
-}
-
-.myInfoFemaleText{
-	position: absolute;
-left: 291px;
-top: 454px;
-
-font-family: 'Bookk Myungjo';
-font-style: normal;
-font-weight: 300;
-font-size: 18px;
-
-color: #9D9690;
+	left: 133px;
+	top: 401px;
 	
+	font-family: 'Bookk Myungjo';
+	font-style: normal;
+	font-weight: 300;
+	font-size: 18px;
+	
+	color: #9D9690;
 }
 
 .genderText {
-		position: absolute;
-left: 35px;
-top: 454px;
-
-font-family: 'Bookk Myungjo';
-font-style: normal;
-font-weight: 300;
-font-size: 18px;
-
-color: #9D9690;
-}
-
-.radioLabelMale {
 	position: absolute;
-	width: 151px;
-	height: 42px;
-	left: 118px;
-	top: 446px;
-	border-radius: 20px;
-	text-align: center;
-	display: flex;
-	align-items: center;
-}
-
-.radioLabelFemale {
-	position: absolute;
-	width: 151px;
-	height: 42px;
-	left: 240px;
-	top: 446px;
+	left: 35px;
+	top: 454px;
 	
-	border-radius: 20px;
-	text-align: center;
-	display: flex;
-	align-items: center;
-}
-
-.radioGenderInput {
-	display: none;
-}
-
-.ellipseMale {
-	margin-left: 10%;
-	width: 22px;
-	height: 22px;
-	background: rgba(176, 151, 144, 0.4);
-	border-radius: 20px;
-	text-align: center;
-	display: flex;
-	align-items: center;
-}
-
-.ellipseFemale {
-	margin-left: 10%;
-	width: 22px;
-	height: 22px;
-	background: rgba(176, 151, 144, 0.4);
-	border-radius: 20px;
-	width: 22px;
-	text-align: center;
-	display: flex;
-	align-items: center;
-}
-
-.maleText {
-	margin-left: 15%;
 	font-family: 'Bookk Myungjo';
 	font-style: normal;
 	font-weight: 300;
-	font-size: 15px;
+	font-size: 18px;
+	
+	color: #9D9690;
+}
+
+
+.maleText {
+	position: relative;
+	top:  390px;
+	left: 135px;
+	font-family: 'Bookk Myungjo';
+	font-style: normal;
+	font-weight: 300;
+	font-size: 18px;
 	line-height: 15px;
-	color: #2A221D;
+	color: #9D9690;
 }
 
 .femaleText {
-	margin-left: 15%;
+	position: relative;
+	top:  390px;
+	left: 75px;
 	font-family: 'Bookk Myungjo';
 	font-style: normal;
 	font-weight: 300;
-	font-size: 15px;
+	font-size: 18px;
 	line-height: 15px;
-	color: #2A221D;
-	font-family: 'Bookk Myungjo';
+	color: #9D9690;
 }
 
 .radioClickEllipse {
@@ -328,29 +251,48 @@ color: #9D9690;
 
 .myInfoAddressText{
 	position: absolute;
-left: 38px;
-top: 510px;
-
-font-family: 'Bookk Myungjo';
-font-style: normal;
-font-weight: 300;
-font-size: 18px;
-
-color: #2A221D;
+	left: 38px;
+	top: 510px;
+	
+	font-family: 'Bookk Myungjo';
+	font-style: normal;
+	font-weight: 300;
+	font-size: 18px;
+	color: #2A221D;	
 }
 
 .myInfoAddress{
 	position: absolute;
-width: 213px;
-left: 136px;
-top: 515px;
+	width: 213px;
+	left: 132px;
+	top: 510px;
 
-font-family: 'Bookk Myungjo';
-font-style: normal;
-font-weight: 300;
-font-size: 15px;
+	background: transparent;
+	border: none;
+	border-bottom: 1px solid lightgray;
+	font-family: 'Bookk Myungjo';
+	font-style: normal;
+	font-weight: 300;
+	font-size: 16px;
+	
+	color: #2A221D;
+}
 
-color: #2A221D;
+.myInfoAddressDetail{
+	position: absolute;
+	width: 213px;
+	left: 132px;
+	top: 540px;
+
+	background: transparent;
+	border: none;
+	border-bottom: 1px solid lightgray;
+	font-family: 'Bookk Myungjo';
+	font-style: normal;
+	font-weight: 300;
+	font-size: 16px;
+	
+	color: #2A221D;
 }
 
 .findAddressBtn{
@@ -392,7 +334,9 @@ color: #2A221D;
 	position: absolute;
 left: 133px;
 top: 620px;
-
+background: transparent;
+border: none;
+border-bottom: 1px solid lightgray;
 font-family: 'Bookk Myungjo';
 font-style: normal;
 font-weight: 300;
@@ -418,7 +362,9 @@ color: #2A221D;
 	position: absolute;
 left: 133px;
 top: 672px;
-
+background: transparent;
+border: none;
+border-bottom: 1px solid lightgray;
 font-family: 'Bookk Myungjo';
 font-style: normal;
 font-weight: 300;
@@ -430,25 +376,25 @@ color: #2A221D;
 .myInfoModifyBtn{
 	box-sizing: border-box;
 
-position: absolute;
-width: 336px;
-height: 47px;
-left: 28px;
-top: 737px;
-
-background: rgba(255, 255, 255, 0.2);
-border: 4px solid rgba(177, 125, 90, 0.2);
-border-radius: 20px;
-
-font-family: 'Bookk Myungjo';
-font-style: normal;
-font-weight: 300;
-font-size: 18px;
-display: flex;
-align-items: center;
-text-align: center;
-justify-content:center;
-color: #2A221D;
+	position: absolute;
+	width: 336px;
+	height: 47px;
+	left: 28px;
+	top: 737px;
+	
+	background: rgba(255, 255, 255, 0.2);
+	border: 4px solid rgba(177, 125, 90, 0.2);
+	border-radius: 20px;
+	
+	font-family: 'Bookk Myungjo';
+	font-style: normal;
+	font-weight: 300;
+	font-size: 18px;
+	display: flex;
+	align-items: center;
+	text-align: center;
+	justify-content:center;
+	color: #2A221D;
 
 
 }
@@ -464,3 +410,85 @@ font-size: 15px;
 border-bottom: solid 1px;
 color: #2A221D;	
 }
+
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.75)
+}
+
+.modal-content {
+  position: relative;
+  background-color: rgba(0, 0, 0, 0);
+  top: 45%; 
+  left: 50%; 
+  transform: translate(-50%, -50%);
+  width: 100%;
+  height: 100%;
+}
+
+.modal-text {
+  position: absolute;
+  top: 35%;
+  font-family: 'Bookk Myungjo';
+  font-style: normal;
+  font-weight: 300;
+  font-size: 18px;
+  color: white;
+  text-align: center;
+  width: 100%;
+}
+
+.modal-input-text {
+  position: absolute;
+  top: 50%; 
+  left: 50%;
+  transform: translateX(-50%);
+  background: transparent;
+  width: 300px;
+  height:25px;
+  border: none;
+  border-bottom: 1px solid white;
+  outline: none;
+  text-align: center;
+  font-family: 'Bookk Myungjo';
+  font-size: 18px;
+  color: white;
+}
+
+
+.modal-input-text:focus {
+  border-bottom: 1px solid white;
+}
+
+.close {
+	position: relative;
+	top: 65px;
+	right: 20px;
+	color: #aaa;
+  	float: right;
+  	font-size: 28px;
+  	font-weight: bold;
+  	width: 20px;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.saveNickname{
+	position: absolute;
+	top: 50%;
+	right: 50px;
+	width: 20px;
+}
+
