--- a/src/main/resources/static/css/admin/admin.css
+++ b/src/main/resources/static/css/admin/admin.css
@@ -82,18 +82,19 @@ body {
 	position: relative;
 	width: 250px;
 	display: flex;
-	height: 85px;
+	
 	vertical-align: middle;
 	align-items: center;
 }
 
 .item-text {
 	position: relative;
+	height: 65px;
 	left: 20px;
 	font-family: 'Bookk Myungjo';
 	font-style: normal;
 	font-weight: 300;
-	font-size: 18px;
+	font-size: 16px;
 	color: #2A221D;
 }
 
@@ -106,6 +107,7 @@ body {
 }
 
 .adminSmallLogo {
+	height: 85px;
 	margin-left: 25px;
 	text-align: center;
 	justify-content: center;
@@ -148,6 +150,46 @@ body {
 	font-family: 'Bookk Myungjo';
 	font-style: normal;
 	font-weight: 300;
-	font-size: 16px;
+	font-size: 15px;
 	color: #2A221D;
+}
+
+.questionListText{
+	margin-top: 2%;
+	font-family: 'Bookk Myungjo';
+	font-style: normal;
+	font-weight: 700;
+	font-size: 2em;
+	margin-left: 10.5vw;
+	text-align: left;
+}
+
+.dataTable{
+	display: inline-table;
+	text-align: center;
+	width: 60vw !important;
+	margin-top: 3%;
+	margin-bottom: 2%;
+	font-family: 'Bookk Myungjo';
+	font-style: normal;
+	border-bottom: 1px solid #ddd;
+	
+}
+th {
+	text-align: center !important;
+	font-weight:800;
+	font-size: 16px;
+}
+.pageBtn{
+	font-family: 'Bookk Myungjo';
+	font-style: normal;
+	padding: 5px;
+	text-decoration: underline;
+	cursor: pointer;
+	text-decoration: blink;
+	font-size: 1.2em;
+}
+
+.question-delete-btn{
+	
 }
