TimeLine 가이드 작성

--- a/src/main/resources/static/css/user/myInfo.css
+++ b/src/main/resources/static/css/user/myInfo.css
@@ -147,6 +147,7 @@ color: #9D9690;
 	font-family: 'Bookk Myungjo';
 	font-style: normal;
 	font-size: 12px; 
+	color: #f08080;
 }
 
 .myInfoRealNameText{
