--- a/src/main/resources/static/css/timeline/postView.css
+++ b/src/main/resources/static/css/timeline/postView.css
@@ -24,6 +24,7 @@ a {
 
 .postBanner{
 	position: absolute;
+	left:0;
 	top:63;
 }
 
@@ -40,13 +41,15 @@ a {
 	top:0;
 	width: 393px;
 	height: 262px;
+	
 }
 
 .profile{
+	position:absolute;
 	width: 393px;
 	height: 101px;
-		margin: 0;
-	padding: 0;
+	top:262px;
+	left:0px;
 }
 
 .allPostLayout{
