--- a/src/main/resources/static/css/timeline/postView.css
+++ b/src/main/resources/static/css/timeline/postView.css
@@ -4,7 +4,7 @@ a {
 	text-decoration: none;
 }
 
-.gobackbtn{
+.gobackbtn {
 	position: absolute;
 	width: 20px;
 	height: 20px;
@@ -13,7 +13,7 @@ a {
 	z-index: 1
 }
 
-.writebtn{
+.writebtn {
 	position: absolute;
 	width: 24px;
 	height: 24px;
@@ -22,37 +22,36 @@ a {
 	z-index: 1
 }
 
-.postBanner{
+.postBanner {
 	position: absolute;
-	left:0;
-	top:63;
+	left: 0;
+	top: 63;
 }
 
-
-.timelineMainImg{
+.timelineMainImg {
 	width: 393px;
 	height: 262px;
 	margin: 0;
 	padding: 0;
 }
 
-.blindImg{
+.blindImg {
 	position: absolute;
-	top:0;
+	left: 0; top : 0;
 	width: 393px;
 	height: 262px;
-	
+	top: 0;
 }
 
-.profile{
-	position:absolute;
+.profile {
+	position: absolute;
 	width: 393px;
 	height: 101px;
-	top:262px;
-	left:0px;
+	top: 262px;
+	left: 0px;
 }
 
-.allPostLayout{
+.allPostLayout {
 	position: absolute;
 	width: 393px;
 	height: 851px;
@@ -61,7 +60,7 @@ a {
 	background-image: url("../../image/timeline/postbackground.png");
 }
 
-.postLayout{
+.postLayout {
 	position: relative;
 	width: 393px;
 	height: 851px;
@@ -69,8 +68,7 @@ a {
 	top: 0px;
 }
 
-
-.postInfo{
+.postInfo {
 	position: relative;
 	width: 393px;
 	height: 77px;
@@ -78,7 +76,7 @@ a {
 	top: 0px;
 }
 
-.profileImg{
+.profileImg {
 	position: absolute;
 	width: 48px;
 	height: 48px;
@@ -86,13 +84,12 @@ a {
 	top: 16px;
 }
 
-.writter{
+.writter {
 	position: absolute;
 	width: 114px;
 	height: 27px;
 	left: 80px;
 	top: 16px;
-	
 	font-family: 'Bookk Myungjo';
 	font-style: normal;
 	font-weight: 700;
@@ -101,17 +98,15 @@ a {
 	display: flex;
 	align-items: center;
 	letter-spacing: 0.05em;
-	
 	color: #2A221D;
 }
 
-.createDate{
+.createDate {
 	position: absolute;
 	width: 181px;
 	height: 24px;
 	left: 81px;
 	top: 37px;
-	
 	font-family: 'Bookk Myungjo';
 	font-style: normal;
 	font-weight: 300;
@@ -119,16 +114,14 @@ a {
 	line-height: 15px;
 	display: flex;
 	align-items: center;
-	
-	color: #9D9690;	
-	
+	color: #9D9690;
 }
 
 .postContent {
-position: relative;
-width: 393px;
-left: 0px;
-top: 77px;
+	position: relative;
+	width: 393px;
+	left: 0px;
+	top: 77px;
 }
 
 .postContentText {
@@ -146,8 +139,5 @@ top: 77px;
 	display: flex;
 	align-items: center;
 	letter-spacing: 0.05em;
-	
 	color: #2A221D;
 }
-
-
