--- a/src/main/resources/static/css/whisper/whisperDetail.css
+++ b/src/main/resources/static/css/whisper/whisperDetail.css
@@ -1,95 +1,86 @@
 @charset "UTF-8";
 
-.whisperDetailFrame{
+.whisperDetailFrame {
 	position: absolute;
-width: 312.38px;
-height: 398px;
-left: 41px;
-top: 263px;
-	
+	width: 312.38px;
+	height: 398px;
+	left: 41px;
+	top: 263px;
 }
 
-.whisperDetailContents{
+.whisperDetailContents {
 	position: absolute;
-width: 249px;
-height: 123px;
-left: 71px;
-top: 278px;
-
-font-family: 'Bookk Myungjo';
-font-style: normal;
-font-weight: 300;
-font-size: 18px;
-line-height: 30px;
-display: flex;
-align-items: center;
-letter-spacing: 0.06em;
-
-color: #2A221D;
+	width: 249px;
+	height: 123px;
+	left: 71px;
+	top: 278px;
+	font-family: 'Bookk Myungjo';
+	font-style: normal;
+	font-weight: 300;
+	font-size: 18px;
+	line-height: 30px;
+	display: flex;
+	align-items: center;
+	letter-spacing: 0.06em;
+	color: #2A221D;
 }
 
-.detailDate{
+.detailDate {
 	position: absolute;
-height: 33px;
-left: 210px;
-top: 585px;
-
-font-family: 'Bookk Myungjo';
-font-style: normal;
-font-weight: 300;
-font-size: 15px;
-line-height: 15px;
-display: flex;
-align-items: center;
-text-align: right;
-
-color: #2A221D;
+	height: 33px;
+	left: 210px;
+	top: 585px;
+	font-family: 'Bookk Myungjo';
+	font-style: normal;
+	font-weight: 300;
+	font-size: 15px;
+	line-height: 15px;
+	display: flex;
+	align-items: center;
+	text-align: right;
+	color: #2A221D;
 }
 
-.detailFromPersonName{
+.detailFromPersonName {
 	position: absolute;
-height: 33px;
-left: 210px;
-top: 610px;
-
-font-family: 'Bookk Myungjo';
-font-style: normal;
-font-weight: 300;
-font-size: 15px;
-line-height: 15px;
-display: flex;
-align-items: center;
-text-align: right;
-
-color: #2A221D;
+	height: 33px;
+	left: 210px;
+	top: 610px;
+	font-family: 'Bookk Myungjo';
+	font-style: normal;
+	font-weight: 300;
+	font-size: 15px;
+	line-height: 15px;
+	display: flex;
+	align-items: center;
+	text-align: right;
+	color: #2A221D;
 }
 
-.detailEllipsis{
+.detailEllipsis {
 	position: absolute;
-width: 23px;
-height: 23px;
-left: 341px;
-top: 72px;
-	
+	width: 23px;
+	height: 23px;
+	left: 341px;
+	top: 72px;
 }
-
 
 .detailDeleteBox {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 73px;
-  background-color: white;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 100%;
+	height: 73px;
+	background-color: white;
 }
 
 .detailDeleteText {
-  font-family: 'Bookk Myungjo';
-  font-style: normal;
-  font-weight: 300;
-  font-size: 20px;
-  line-height: 20px;
-  color: #E16646;
+	font-family: 'Bookk Myungjo';
+	font-style: normal;
+	font-weight: 300;
+	font-size: 20px;
+	line-height: 20px;
+	color: #E16646;
 }
 
 .detailDeleteBox {
@@ -99,9 +90,10 @@ top: 72px;
 	width: 100%; /* 가로폭 100% */
 	text-align: center; /* 가운데 정렬 */
 	transform: translateY(100%); /* 처음에는 아래로 숨겨놓음 */
-	transition: transform 0.3s, bottom 0.3s; /* transform, bottom 속성이 변할 때 애니메이션 효과 적용 */
+	transition: transform 0.3s, bottom 0.3s;
+	/* transform, bottom 속성이 변할 때 애니메이션 효과 적용 */
 	border-radius: 30px 30px 0 0; /* 상단 모서리만 둥글게 */
-    overflow: hidden; /* 모서리 부분이 넘치는 것을 방지하기 위해 overflow 속성 추가 */
+	overflow: hidden; /* 모서리 부분이 넘치는 것을 방지하기 위해 overflow 속성 추가 */
 }
 
 .detailDeleteBox.active {
@@ -109,45 +101,46 @@ top: 72px;
 	bottom: 0; /* bottom 속성 값 변경 */
 }
 
-
 /* 모달 창 스타일 */
 .modal {
-  display: none;
-  position: fixed;
-  z-index: 1;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  overflow: auto;
-  background-color: rgba(0, 0, 0, 0.4);
+	display: none;
+	position: fixed;
+	z-index: 1;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	overflow: auto;
+	background-color: rgba(0, 0, 0, 0.4);
 }
 
 .modal-content {
-  background-color: #fefefe;
-  margin: auto;
-  padding: 20px;
-  border-radius: 10px;
-  width: 300px;
-  text-align: center;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+	background-color: #fefefe;
+	margin: auto;
+	border-radius: 15px;
+	width: 284px;
+	height: 141px;
+	text-align: center;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
 }
 
 .modal-deleteText {
-  font-family: 'Bookk Myungjo';
-  font-style: normal;
-  font-weight: 300;
-  font-size: 20px;
-  line-height: 20px;
+	margin-top: 36px; text-align : center;
+	display: inline-block;
+	font-family: 'Bookk Myungjo';
+	font-style: normal;
+	font-weight: 300;
+	font-size: 18px;
+	text-align: center;
 }
 
 .modal-buttons {
-  display: flex;
-  justify-content: center;
-  margin-top: 20px;
+	display: flex;
+	justify-content: center;
+	margin-top: 20px;
 }
 
 .modal-buttons button {
@@ -159,14 +152,54 @@ top: 72px;
 }
 
 #cancel-button {
-  background-color: #e6e6e6;
-  width: 50%;
-  color: #333;
+	background-color: #e6e6e6;
+	width: 50%;
+	color: #333;
 }
 
 #delete-button {
-  background-color: #e16646;
-  width: 50%;
-  color: #fff;
+	background-color: #e16646;
+	width: 50%;
+	color: #fff;
+}
+
+.modal-btn-box {
+	position: absolute;
+	border-top: solid 1px #DCDAD9; bottom : 0;
+	width: 100%;
+	height: 47px;
+	bottom: 0;
+}
+
+.btn-cancel-area {
+	position: absolute;
+	left: 0;
+	width: 50%;
+	height: 100%;
+	border-right: solid 1px;
+	display: inline-block;
+	justify-content: center;
+	font-family: 'Bookk Myungjo';
+	font-size: 18px;
+	background-color: #fefefe;
+	border: none;
+	border-right: solid 1px #DCDAD9; color : #2A221D;
+	border-bottom-left-radius: 15px;
+	color: #2A221D
+}
+
+.btn-delete-area {
+	position: absolute;
+	left: 50%;
+	width: 50%;
+	height: 100%;
+	align-items: center;
+	justify-content: center;
+	border-bottom-right-radius: 15px;
+	font-family: 'Bookk Myungjo';
+	font-size: 18px;
+	background-color: #fefefe;
+	border: none;
+	color: #E16646;
 }
 
