--- a/src/main/resources/static/css/user/requestBox.css
+++ b/src/main/resources/static/css/user/requestBox.css
@@ -102,5 +102,201 @@ align-items: center;
 text-align: center;
 justify-content:center;
 color: #DE2F2F;
-	
+}
+
+.typeText {
+	position: absolute;
+	width: 98px;
+	height: 45px;
+	left: 49px;
+    top: 55%;
+	font-family: 'Bookk Myungjo';
+	font-style: normal;
+	font-weight: 300;
+	font-size: 18px;
+	line-height: 18px;
+	display: flex;
+	align-items: center;
+	color: #2A221D;
+}
+
+.radioLabelCommon {
+	position: absolute;
+	width: 151px;
+	height: 42px;
+	left: 42px;
+	top: 60%;
+	border-radius: 20px;
+	text-align: center;
+	display: flex;
+	align-items: center;
+}
+
+.radioLabelFamily {
+	position: absolute;
+	width: 151px;
+	height: 42px;
+	left: 200px;
+	top: 60%;
+	border-radius: 20px;
+	text-align: center;
+	display: flex;
+	align-items: center;
+}
+
+.radioTypeInput {
+	display: none;
+}
+
+.ellipseCommon {
+	margin-left: 10%;
+	width: 22px;
+	height: 22px;
+	background: rgba(176, 151, 144, 0.4);
+	border-radius: 20px;
+	text-align: center;
+	display: flex;
+	align-items: center;
+}
+
+.ellipseFamily {
+	margin-left: 10%;
+	width: 22px;
+	height: 22px;
+	background: rgba(176, 151, 144, 0.4);
+	border-radius: 20px;
+	text-align: center;
+	display: flex;
+	align-items: center;
+}
+
+.commonText {
+	margin-left: 10%;
+	font-family: 'Bookk Myungjo';
+	font-style: normal;
+	font-weight: 300;
+	font-size: 15px;
+	line-height: 15px;
+	color: #2A221D;
+}
+
+.familyText {
+	margin-left: 10%;
+	font-family: 'Bookk Myungjo';
+	font-style: normal;
+	font-weight: 300;
+	font-size: 15px;
+	line-height: 15px;
+	color: #2A221D;
+	font-family: 'Bookk Myungjo';
+}
+
+.radioClickEllipse {
+	width: 18px;
+	height: 18px;
+	background: rgba(176, 151, 144, 0.8);
+	border-radius: 20px;
+	margin: auto;
+}
+
+/* 모달 창 스타일 */
+.modal {
+	display: none;
+	position: fixed;
+	z-index: 1;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	overflow: auto;
+	background-color: rgba(0, 0, 0, 0.4);
+}
+
+.modal-content {
+	background-color: #fefefe;
+	margin: auto;
+	border-radius: 15px;
+	width: 284px;
+	height: 141px;
+	text-align: center;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+}
+
+.modal-deleteText {
+	margin-top: 36px; text-align : center;
+	display: inline-block;
+	font-family: 'Bookk Myungjo';
+	font-style: normal;
+	font-weight: 300;
+	font-size: 18px;
+	text-align: center;
+}
+
+.modal-buttons {
+	display: flex;
+	justify-content: center;
+	margin-top: 20px;
+}
+
+.modal-buttons button {
+	padding: 10px 20px;
+	border-radius: 5px;
+	border: none;
+	font-size: 16px;
+	cursor: pointer;
+}
+
+#cancel-button {
+	background-color: #e6e6e6;
+	width: 50%;
+	color: #333;
+}
+
+#delete-button {
+	background-color: #e16646;
+	width: 50%;
+	color: #fff;
+}
+
+.modal-btn-box {
+	position: absolute;
+	border-top: solid 1px #DCDAD9; bottom : 0;
+	width: 100%;
+	height: 47px;
+	bottom: 0;
+}
+
+.btn-cancel-area {
+	position: absolute;
+	left: 0;
+	width: 50%;
+	height: 100%;
+	border-right: solid 1px;
+	display: inline-block;
+	justify-content: center;
+	font-family: 'Bookk Myungjo';
+	font-size: 18px;
+	background-color: #fefefe;
+	border: none;
+	border-right: solid 1px #DCDAD9; color : #2A221D;
+	border-bottom-left-radius: 15px;
+	color: #2A221D
+}
+
+.btn-delete-area {
+	position: absolute;
+	left: 50%;
+	width: 50%;
+	height: 100%;
+	align-items: center;
+	justify-content: center;
+	border-bottom-right-radius: 15px;
+	font-family: 'Bookk Myungjo';
+	font-size: 18px;
+	background-color: #fefefe;
+	border: none;
+	color: #E16646;
 }
