--- a/src/main/resources/static/css/timeline/insertPost.css
+++ b/src/main/resources/static/css/timeline/insertPost.css
@@ -21,16 +21,16 @@ top: 63px;
 
 .insertContentareaBox{
 	height: 470px;
-	background: #FFFFFF;
 	text-align: center;
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	background-image: url("../../image/timeline/postbackground.png");
 }
 
 .insertContentarea{
 	width: 90%;
-	height: 90%;
+	height: 92%;
 	font-family: 'Bookk Myungjo';
 	font-style: normal;
 	font-weight: 300;
@@ -59,5 +59,5 @@ position: absolute;
 width: 143.99px;
 height: 26.61px;
 left: 22px;
-top: 811px;
+top: 748px;
 }
